--- a/index.html
+++ b/index.html
@@ -98,135 +98,137 @@
         <!-- Navbar End -->
 
         <!-- Carousel Start -->
-        <div class="container-fluid p-0 mb-5 wow fadeIn" data-wow-delay="0.1s">
-            <img class="w-100" src="img/carousel-1.jpg" alt="Image" />
-            <div class="carousel-caption">
-                <div class="container">
-                    <div
-                        class="row justify-content-center"
-                        style="background: rgba(0, 0, 0, 0.5); padding: 30px"
-                    >
-                        <div class="col-6 col-lg-6 form-content">
-                            <h2 class="text-light mb-4">
-                                Key Benefits of AI-Powered Business Automation:
-                            </h2>
-                            <ul>
-                                <li>Optimize workflows and boost efficiency</li>
-                                <li>
-                                    Automate repetitive tasks and reduce human
-                                    errors
-                                </li>
-                                <li>
-                                    Improve decision-making with AI-driven
-                                    analytics
-                                </li>
-                                <li>
-                                    Enhance customer experience through
-                                    intelligent automation
-                                </li>
-                                <li>
-                                    Scale operations seamlessly with AI-powered
-                                    solutions
-                                </li>
-                                <li>
-                                    Reduce operational costs while increasing
-                                    productivity
-                                </li>
-                                <li>
-                                    Stay ahead of the competition with
-                                    cutting-edge automation technology
-                                </li>
-                            </ul>
-                        </div>
+        <div
+            class="container-fluid p-0 mb-5 wow fadeIn"
+            data-wow-delay="0.1s"
+            style="
+                background-image: url(img/carousel-1.jpg);
+                height: 100%;
+                object-fit: cover;
+                background-size: cover;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            "
+        >
+            <div
+                class="container"
+                style="margin-top: 100px; margin-bottom: 100px"
+            >
+                <div
+                    class="row"
+                    style="background: rgba(0, 0, 0, 0.8); padding: 30px"
+                >
+                    <div class="col-12 col-lg-6 form-content">
+                        <h2 class="text-light mb-4">
+                            Key Benefits of AI-Powered Business Automation:
+                        </h2>
+                        <ul>
+                            <li style="color: #fff">
+                                Optimize workflows and boost efficiency
+                            </li>
+                            <li style="color: #fff">
+                                Automate repetitive tasks and reduce human
+                                errors
+                            </li>
+                            <li style="color: #fff">
+                                Improve decision-making with AI-driven analytics
+                            </li>
+                            <li style="color: #fff">
+                                Enhance customer experience through intelligent
+                                automation
+                            </li>
+                            <li style="color: #fff">
+                                Scale operations seamlessly with AI-powered
+                                solutions
+                            </li>
+                            <li style="color: #fff">
+                                Reduce operational costs while increasing
+                                productivity
+                            </li>
+                            <li style="color: #fff">
+                                Stay ahead of the competition with cutting-edge
+                                automation technology
+                            </li>
+                        </ul>
+                    </div>
 
-                        <div
-                            class="col-lg-6 wow fadeInUp mx-auto text-center"
-                            data-wow-delay="0.5s"
-                        >
-                            <form action="thanks.html" method="get">
-                                <div class="row g-3">
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input
-                                                type="text"
-                                                class="form-control border-0 bg-light"
-                                                id="name"
-                                                name="f_name"
-                                                placeholder="Your Name"
-                                                required
-                                            />
-                                            <label
-                                                for="name"
-                                                style="color: #333"
-                                                >Your Name</label
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input
-                                                type="email"
-                                                class="form-control border-0 bg-light"
-                                                id="email"
-                                                name="email"
-                                                placeholder="Your Email"
-                                                required
-                                            />
-                                            <label
-                                                style="color: #333"
-                                                for="email"
-                                                >Your Email</label
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <input
-                                                type="text"
-                                                class="form-control border-0 bg-light"
-                                                id="subject"
-                                                name="subject"
-                                                placeholder="Subject"
-                                                required
-                                            />
-                                            <label
-                                                style="color: #333"
-                                                for="subject"
-                                                >Subject</label
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <textarea
-                                                class="form-control border-0 bg-light"
-                                                placeholder="Leave a message here"
-                                                id="message"
-                                                name="message"
-                                                style="height: 150px"
-                                                required
-                                            ></textarea>
-                                            <label
-                                                style="color: #333"
-                                                for="message"
-                                                >Message</label
-                                            >
-                                        </div>
-                                    </div>
-                                    <div
-                                        class="col-12"
-                                        style="text-align: left"
-                                    >
-                                        <button
-                                            class="btn btn-primary py-3 px-5"
-                                            type="submit"
+                    <div
+                        class="col-lg-6 col-12 wow fadeInUp mx-auto text-center"
+                        data-wow-delay="0.5s"
+                    >
+                        <form action="thanks.html" method="get">
+                            <div class="row g-3">
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input
+                                            type="text"
+                                            class="form-control border-0 bg-light"
+                                            id="name"
+                                            name="f_name"
+                                            placeholder="Your Name"
+                                            required
+                                        />
+                                        <label for="name" style="color: #333"
+                                            >Your Name</label
                                         >
-                                            Send Message
-                                        </button>
                                     </div>
                                 </div>
-                            </form>
-                        </div>
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input
+                                            type="email"
+                                            class="form-control border-0 bg-light"
+                                            id="email"
+                                            name="email"
+                                            placeholder="Your Email"
+                                            required
+                                        />
+                                        <label style="color: #333" for="email"
+                                            >Your Email</label
+                                        >
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <input
+                                            type="text"
+                                            class="form-control border-0 bg-light"
+                                            id="subject"
+                                            name="subject"
+                                            placeholder="Subject"
+                                            required
+                                        />
+                                        <label style="color: #333" for="subject"
+                                            >Subject</label
+                                        >
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <textarea
+                                            class="form-control border-0 bg-light"
+                                            placeholder="Leave a message here"
+                                            id="message"
+                                            name="message"
+                                            style="height: 150px"
+                                            required
+                                        ></textarea>
+                                        <label style="color: #333" for="message"
+                                            >Message</label
+                                        >
+                                    </div>
+                                </div>
+                                <div class="col-12" style="text-align: left">
+                                    <button
+                                        class="btn btn-primary py-3 px-5"
+                                        type="submit"
+                                    >
+                                        Send Message
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
